# Soil

./: .clang-format  .clang-tidy  .gitignore  .parcelrc  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  main.cpp  package-lock.json  package.json  temp.cpp  vcpkg-configuration.json  vcpkg.json
_cmake/: common_options.cmake
_cmake/dependencies/: nui.cmake
backend/source/backend/: CMakeLists.txt  main.cpp
bedrock_lsp/: CMakeLists.txt
bedrock_lsp/src/: main.cpp
bedrock_lsp/src/lsp/: io_transport_layer.cpp  io_transport_layer.hpp  lsp_manager.cpp  lsp_manager.hpp
bedrock_lsp/src/rpc/: rpc_manager.cpp  rpc_manager.hpp  transport_layer.hpp
dx_12_frame_stealer/: CMakeLists.txt
dx_12_frame_stealer/src/: dllmain.cpp  ipc.hpp
frontend/include/frontend/: main_page.hpp
frontend/source/frontend/: CMakeLists.txt  main.cpp  main_page.cpp
resources/: documents_to_load.json
resources/ui/: colors.rcss  folder_view.rcss  main.rml  main_style.rcss  rml.rcss  shared.rcss  window.rml
resources/ui/file_tree/: file.rml  folder.rml
resources/ui/menu/: menu_bar.rcss  menu_bar.rml
resources/ui/settings/: settings.rcss  settings.rml  settings_before.rml  settings_element.rml
soil_application/: debug.hpp  fs_provider.cpp  fs_provider.hpp  settings.cpp  settings.hpp  soil.cpp  soil.hpp  types.hpp
soil_application/Application/: application.cpp  application.hpp  application_sidebar.cpp  cursor.hpp  header_bar.hpp  jet_brains_mono.hpp
soil_application/Application/components/: folder_tree.cpp  folder_tree.hpp  simple_button.hpp
soil_application/Application/memory/: alloc_wrapper.hpp  fallback_allocator.hpp  pointer.hpp
soil_application/Application/project/: filesystem_tree.cpp  filesystem_tree.hpp
soil_application/Application/scintilla/: include.hpp  surface.cpp  surface.hpp
soil_application/Application/ttf/: simple_ttf.cpp  simple_ttf.hpp
soil_application/Application/windows/: communication_manager.cpp  communication_manager.hpp  dx_talker.cpp  dx_talker.hpp  injector.cpp  injector.hpp  keyboard.cpp  keyboard.hpp
soil_application/DirectXMagic/: dx_creation.cpp  dx_creation.hpp
soil_application/clay/: clay_binding.cpp  clay_binding.hpp  components.hpp  raywrapped.hpp  render.cpp  render.hpp  simple_id_generator.cpp  simple_id_generator.hpp  templates.hpp
soil_application/clay/components/: header_button.hpp
soil_application/document/: document_loader.cpp  document_loader.hpp  document_manager.cpp  document_manager.hpp
soil_application/flag_manager/: flag_manager.hpp
soil_application/folder_tree/: folder_tree.cpp  folder_tree.hpp
soil_application/graphics_api/: dx11.cpp  dx11.hpp  dx12.cpp  dx12.hpp  ogl.cpp  ogl.hpp  open_dx_11.cpp  open_dx_11.hpp  texture.cpp  texture.hpp  windows.hpp
soil_application/open_gl_magic/: ogl.cpp  ogl.hpp
soil_application/process_queue/: process_queue.cpp  process_queue.hpp
soil_application/rml_extra/: gl_texture_element.cpp  gl_texture_element.hpp  ogl_instancer.cpp  ogl_instancer.hpp  rml_functions.cpp  rml_functions.hpp
soil_application/rml_ui_backend/: RmlUi_Backend.h  RmlUi_Backend_GLFW_GL3.cpp  RmlUi_Platform_GLFW.h  RmlUi_Renderer_GL3.cpp  RmlUi_Renderer_GL3.h
soil_application/shim/: fs_shim.cpp  fs_shim.hpp
soil_application/side_bar/: side_bar.cpp  side_bar.hpp
soil_application/web/: webview.cpp  webview.hpp
src/: main.cpp  types.hpp
src/Application/: Application.cpp  Application.hpp  ApplicationSidebar.hpp  application.hpp  application_sidebar.hpp  cursor.hpp  editor_config.hpp  header_bar.hpp  jet_brains_mono.hpp
src/Application/components/: folder_tree.cpp  folder_tree.hpp
src/Application/memory/: pointer.hpp
src/Application/project/: filesystem_tree.cpp  filesystem_tree.hpp  project.hpp
src/Application/ttf/: simple_ttf.cpp  simple_ttf.hpp
src/clay/: clay_binding.cpp  clay_binding.hpp  components.hpp  render.cpp  templates.hpp
src/clay/components/: header.hpp  header_button.hpp
static/: index.html
static/source/: index.js
tests/: fallback_allocator.cpp
